# github-stats-generator

./: .dockerignore  .gitignore  .mdb  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  github_pat.template  index.html  package.json  publish.sh
.github/workflows/: publish.yaml
backend/: .env.sample  package.json  tsconfig.json
backend/src/graphql/: langs.ts  nodes.ts
backend/src/public/: active-projects.vue  index.html  init.js  my-languages.vue  pie-chart.vue
backend/src/routes/: apis.ts  index.ts
docs/: index.html
frontend/: package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/components/: ActiveProjects.vue  UsedLanguages.vue
frontend/src/components/charts/: BarChart.vue  PieChart.vue
graphql/: active_repositories.graphql  github_stats.graphql  list_repositories.graphql  query.graphql  top_languages.graphql
src/: color.rs  config.rs  convert.rs  fetch.rs  generated.rs  graphql.rs  index.ts  main.rs  publish.rs  query.rs  renderer.rs
src/config/: index.ts
src/graphql/: active_projects.ts  nodes.ts  user_repositories.ts
src/models/: http-status.ts  task.ts
src/public/: active-projects.vue  index.html  init.js  my-languages.vue  pie-chart.vue
src/routes/: apis.ts  index.ts  tasks.ts
src/services/: github.ts
