[package]
name = "github-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
reqwest = { version = "0.11.18", features = ["json"] }
rocket = "0.5.0-rc.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
svg = "0.13.1"
tokio = "1.29.1"
