[package]
name = "github-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
graphql_client = "0.13.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
svg = "0.13.1"
tokio = { version= "1.29.1", features = ["rt-multi-thread", "macros"] }
toml = "0.7.6"

[dev-dependencies]
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
